// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer actions apiClear() clears the resource 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {
    "people": Object {},
  },
}
`;

exports[`reducer actions apiConfigure() updates the apiConfig key 1`] = `
Object {
  "apiConfig": Object {
    "baseUrl": "http://coverhound.com/api",
  },
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {},
}
`;

exports[`reducer actions apiCreate() increments isCreating 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 1,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {},
}
`;

exports[`reducer actions apiCreate() populates the state with resources 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {
    "people": Object {
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`reducer actions apiDelete() increments isDeleting and marks the resource as pending 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 1,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {
    "people": Object {
      "2": Object {
        "attributes": Object {
          "name": "Yangster",
        },
      },
      "5": Object {
        "attributes": Object {
          "name": "Johnny",
        },
        "isPending": true,
      },
    },
  },
}
`;

exports[`reducer actions apiDelete() removes the resources from the store 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {
    "people": Object {
      "2": Object {
        "attributes": Object {
          "name": "Yangster",
        },
      },
    },
  },
}
`;

exports[`reducer actions apiHydrate() populates the state with resources 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {
    "people": Object {
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`reducer actions apiRead() increments isReading 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 1,
  "isUpdating": 0,
  "resources": Object {},
}
`;

exports[`reducer actions apiRead() populates the state with resources 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {
    "people": Object {
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`reducer actions apiUpdate() increments isUpdating and marks the resource as pending 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 1,
  "resources": Object {
    "people": Object {
      "2": Object {
        "attributes": Object {
          "name": "Yangster",
        },
      },
      "5": Object {
        "attributes": Object {
          "name": "Johnny",
        },
        "isPending": true,
      },
    },
  },
}
`;

exports[`reducer actions apiUpdate() updates the state with resources 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {
    "people": Object {
      "5": Object {
        "attributes": Object {
          "age": 25,
          "hair": "black",
        },
        "id": 5,
        "type": "people",
      },
    },
  },
}
`;

exports[`reducer initialState has an empty resources object 1`] = `
Object {
  "apiConfig": Object {},
  "isCreating": 0,
  "isDeleting": 0,
  "isReading": 0,
  "isUpdating": 0,
  "resources": Object {},
}
`;
